/*
 * This file defines the initial model-level definitions for the various object
 * types that Bazooka uses.
 */

package generated;

/*
 * A Revision refers to a distinct version of an Application.
 */
message Revision {
  /*
   * The version of this entity record's schema definition---not its values.
   */
  optional int32 version = 1 [default = 0];

  /*
   * A Revision possesses several lifecycle states.
   */
  enum State {
    /*
     * A given Revision is in the process of being created or built and has not
     * been finalized.
     */
    PROPOSED = 0;
    /*
     * A Revision has been promoted from being proposed to actually being
     * accepted.
     */
    ACCEPTED = 1;
    /*
     * A Revision has been recently demoted and slated for deletion.
     */
    REJECTED = 2;
  }

  optional State state = 2;

  /*
   * The link the the artifact that encapsulates this given revision.
   */
  optional string archive_url = 3;

  optional int64 registration_timestamp = 4;
}

/*
 * A Instance refers to a concrete UNIX process for a Application and ProcType
 * pair.
 */
message Instance {

  /*
   * The version of this entity record's schema definition---not its values.
   */
  optional int32 version = 1 [default = 0];

  enum State {
    IDLE = 1;
    PENDING_CLAIM = 2;
    PENDING_START = 3;
    RUNNING = 4;
    QUIT = 5;
    FAILED = 6;
  }

  optional State state = 2;

  optional int32 limit_failures_allowed = 3 [default = 0];
  optional int32 failures = 4 [default = 0];

  optional string serving_address = 5;
  optional int32 serving_port = 6;
  optional string application_name = 7;
  optional string revision_name = 8;
  optional string process_name = 9;
}
